<resources>
    <string name="app_name">Brascol</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="maximo_caracteres_texto">18</string>

    <string name="server_error">Problemas para enviar os dados</string>
    <string name="entrar">Entrar</string>
    <string name="internet_error">Sem conexão</string>
    <string name="tentar">Tentar novamente</string>
    <string name="login_senha_error">Não esqueça da senha!</string>
    <string name="esqueceu_senha_info">Por favor, insira seu e-mail abaixo\ne enviaremos instruções de acesso:</string>
    <string name="campo_email_invalido">Preencha seu e-mail corretamente!</string>
    <string name="campo_nome_obrigatorio">Nome obrigatório</string>
    <string name="campo_email_obrigatorio">E-mail obrigatório</string>
    <string name="campo_celular_error">Celular inválido</string>
    <string name="campo_senha_error">Senha obrigatória</string>
    <string name="campo_confirmar_senha_error">Campo de confirmação de senha obrigatório</string>
    <string name="menu_catalogo">CATÁLOGO</string>
    <string name="campo_doc_error">Documento obrigatório</string>
    <string name="campo_confirmar_senha_diferentes">Senhas digitadas são diferentes</string>
    <string name="campo_doc_invalido">Documento inválido</string>
    <string name="campo_cpf_invalido">CPF inválido</string>
    <string name="campo_cnpj_invalido">CNPJ inválido</string>
    <string name="menu_cadastro">CADASTRO</string>
    <string name="ok">Ok</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="email_login_error">Ops! E-mail ou senha incorretos</string>
    <string name="mensagem_saindo">Pressione novamente para deslogar</string>
    <string name="mensagem_sair_app">Pressione novamente para fechar</string>
    <string name="campo_email_ja_associado">Este e-mail ja está associado a outra conta.</string>
    <string name="informacoes_salvas">As informações foram salvas</string>
    <string name="menu_carrinho">Carrinho</string>
    <string name="menu_filtros">Filtros</string>
    <string name="limpar">Limpar</string>
    <string name="menu_welcome">Bem-vindo</string>
    <string name="processamento_error">Erro no processamento</string>
    <string name="sem_app_whatsapp">Não foi possível abrir o aplicativo WhatsApp</string>
    <string name="sem_filtro_selecionado">Nenhum filtro foi selecionado</string>
    <string name="requer_login">Necessário realizar o login</string>
    <string name="mensagem_sem_filtro">Prezado cliente, para visualizar nossos produtos solicite o acesso a um de nossos vendedores.</string>
    <string name="menu_editar_perfil">Editar Perfil</string>
    <string name="menu_login">Login</string>
    <string name="adicionar_carrinho">Adicionar ao carrinho</string>
    <string name="produto_atualizado">Produto atualizado</string>
    <string name="produto_adicionado_carrinho">Produto adicionado</string>
    <string name="image_transition">image_transition</string>
    <string name="atualizar_carrinho">Atualizar carrinho</string>
    <string name="selecione_quantidade">Selecione a quantidade</string>
    <string name="info_first_time_grid">Para zerar, pressione\npor 2 segundos</string>
    <string name="endereco_sem_mapeamento">Endereço sem mapeamento</string>
    <string name="remover_produto_carrinho">Tem certeza que deseja excluir esse produto do carrinho?</string>
    <string name="produto_removido">Produto removido</string>
    <string name="desfazer">Desfazer</string>
    <string name="recarrgar_produto">Carregando Produtos</string>
    <string name="observacoes">Observações</string>
    <string name="resumo">Resumo</string>
    <string name="total">Total</string>
    <string name="pecas">Peças</string>
    <string name="pecas_2p">Peças:</string>
    <string name="cores2">Cores:</string>
    <string name="composicao2p">Composição:</string>
    <string name="referencia_2p">Referência:</string>
    <string name="total_2p">Total:</string>
    <string name="resumo_pedido">Resumo do pedido</string>
    <string name="observacoes_salvas">Obeservações salvas</string>
    <string name="finalizar_compra">Finalizar orçamento</string>
    <string name="texto_esgotado">Produto Esgotado</string>
    <string name="parabens">Parabéns</string>
    <string name="texto_orcamento_concluido">Seu orçamento foi enviado com sucesso\ne uma cópia foi enviada ao seu e-mail.</string>
    <string name="menu_compra_efetuada">Orçamento efetuado</string>
    <string name="sem_produtos_no_carrinho">Você ainda não adicionou nenhum produto no seu carrinho.</string>
    <string name="total_pecas">Total de peças</string>
    <string name="login_cadastre">Cadastre-se.</string>
    <string name="login_sem_cadastro">Não possui cadastro?</string>
    <string name="login_esqueceu_senha">Esqueceu sua senha?</string>
    <string name="ligin_hint_senha">Senha</string>
    <string name="ambiente_homolog">Ambiente de Homologação</string>
    <string name="sem_permissao">Serm permissões para compartilhar</string>
    <string name="login_facebook">Login Facebook</string>
    <string name="login_google">Login Google</string>
    <string name="login_message">Acessando rede social...</string>
    <string name="please_complete_profile_2p">Por favor complete seu cadastro:</string>
    <string name="sem_foto">Produto sem foto</string>
    <string name="cpf">CPF</string>
    <string name="cnpj">CNPJ</string>
    <string name="cpf_ou_cnpj">CNPJ ou CPF</string>
    <string name="produto_fora_estoque">Este produto não está disponível em estoque!</string>
    <string name="erro_servico_categorias">Erro ao buscar categorias no serviço: Erro: %1$s</string>
    <string name="search">Pesquisar</string>
    <string name="title_to_modal_can_sync">Selecione os filtros</string>
    <string name="title_to_modal_ask_contact">Sincronização</string>
    <string name="text_to_modal_ask_contact">Para sincronizar produtos no seu ambiente solicite contato</string>
    <string name="nenhum_produto_encontrado">Nenhum produto encontrado</string>
    <string name="pesquisar_2">Pesquisar por marca</string>
</resources>
