<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/footer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labelResumo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resumo_pedido"
                android:textAllCaps="true"
                android:textColor="@color/infoTextColor"
                android:textSize="13sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="5dp"
                android:background="@color/infoTextColor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/textLabelTotal"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="left"
                android:text="@string/total"
                android:textColor="@color/productLabelColor"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/txtValorTotal"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="right"
                android:text="R$ 0,00"
                android:textAllCaps="true"
                android:textColor="@color/productTextColor"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/textLabelTotalPecas"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="left"
                android:text="@string/total_pecas"
                android:textColor="@color/productLabelColor"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/txtTotalPecas"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="right"
                android:text="0"
                android:textAllCaps="true"
                android:textColor="@color/productTextColor"
                android:textSize="13sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/observacoes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/observacoes"
                android:textColor="@color/productHeaderLine"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape_line_success">

                <EditText
                    android:id="@+id/edObservacoes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@android:color/transparent"
                    android:minLines="2"
                    android:textColor="@color/productHeaderLine"
                    android:textColorHint="@color/textLight" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/box_finalizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/colorScreenBackground"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/btnCarrinho"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/shape_button"
            android:text="@string/finalizar_compra"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            android:textSize="@dimen/button_text_size" />

    </LinearLayout>

</LinearLayout>