<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorScreenBackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingLeft="@dimen/screen_padding"
        android:paddingRight="@dimen/screen_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:orientation="vertical">

                <include layout="@layout/logo_include" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="30dp"
                    android:background="@color/actionBarLine" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <LinearLayout
                        android:id="@+id/login_facebook"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginRight="10dp"
                            android:src="@drawable/icon_facebook" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/login_facebook"
                            android:textColor="@color/colorFacebook" />

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/login_google"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginRight="10dp"
                            android:src="@drawable/icon_google" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/login_google"
                            android:textColor="@color/colorGoogle" />

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/actionBarLine" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/bgErroEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_line_success"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="13dp"
                    android:background="@mipmap/icon_user" />

                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center|left"
                    android:hint="E-mail"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/textLight"
                    android:textSize="16sp" />


                <ImageButton
                    android:id="@+id/btnApagarEmail"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="15dp"
                    android:background="@mipmap/icon_sair"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/imgErroEmail"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="10dp"
                    android:background="@mipmap/icon_exclamcao"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bgErroSenha"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_line_success"
                android:orientation="horizontal"
                android:weightSum="1">

                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:background="@mipmap/icon_password" />

                <EditText
                    android:id="@+id/txtSenha"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center|left"
                    android:hint="@string/ligin_hint_senha"
                    android:inputType="textPassword"
                    android:textColor="#959595"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/imgErroSenha"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="10dp"
                    android:background="@mipmap/icon_exclamcao"
                    android:visibility="gone" />

            </LinearLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_button"
                android:text="@string/entrar"
                android:textAllCaps="false"
                android:textColor="@color/textColor"
                android:textSize="@dimen/button_text_size" />

            <TextView
                android:id="@+id/txtEsqueceuSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="40dp"
                android:clickable="true"
                android:gravity="right"
                android:text="@string/login_esqueceu_senha"
                android:textColor="@color/textLight"
                android:textSize="16sp"
                android:textStyle="normal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="0.7"
                    android:clickable="true"
                    android:gravity="left"
                    android:text="@string/login_sem_cadastro"
                    android:textColor="@color/textLight"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txtCadastro"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="0.7"
                    android:clickable="true"
                    android:gravity="left"

                    android:text="@string/login_cadastre"
                    android:textColor="@color/colorButton"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <include layout="@layout/loading" />

</RelativeLayout>
