<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/container_product_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/capa"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="2"
                    android:gravity="left">

                    <ImageView
                        android:id="@+id/imgProduto"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtProduto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textAllCaps="true"
                        android:textColor="@color/productLabelColor"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/txtCodigo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAllCaps="true"
                        android:textColor="@color/productLabelLightColor"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/txtValor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textAllCaps="true"
                        android:textColor="@color/productLabelLightColor"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/textLabelPecas"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="@string/pecas_2p"
                            android:textColor="@color/productLabelColor"
                            android:textSize="13sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtTotalPecas"
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight=".75"
                            android:gravity="left"
                            android:textColor="@color/productLabelLightColor"
                            android:textSize="13sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:weightSum="1">

                        <TextView
                            android:id="@+id/textLabelTotal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="@string/total_2p"
                            android:textColor="@color/productLabelColor"
                            android:textSize="13sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtValorTotal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/productLabelLightColor"
                            android:textSize="13sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/btnExcluir"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center|right"
                    android:background="@mipmap/trash_can"
                    android:paddingBottom="40dp"
                    android:paddingTop="40dp"
                    android:scaleType="fitXY"
                    android:tint="@color/colorAccent" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:background="@color/actionBarLine" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/esgotado"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:src="@mipmap/icon_exclamcao"
                android:tint="@color/colorEsgotado" />

            <TextView
                android:id="@+id/textEsgotado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/texto_esgotado"
                android:textAllCaps="true"
                android:textColor="@color/colorEsgotado"
                android:textSize="13sp" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>